fix process_execute with escaped arguments